Add rtc::ScopedAllowBaseSyncPrimitives for WebRTC.

This class links together Chromium's ScopedAllowBaseSyncPrimitives and WebRTCs.
Now that WebRTC is starting to use Chromium's sync primitives, this allows
us to continue reduce locking inside of WebRTC that can cause slowdown
on Chromium threads, while guarding against regressions.

Bug: 796889, 795340
Change-Id: Icd71c13e04433aa67e3f22f5d510aa724b413fa9